--- a/functions/package.json
+++ b/functions/package.json
@@ -15,10 +15,19 @@
   "main": "lib/index.js",
   "dependencies": {
     "@types/cors": "^2.8.6",
+    "@types/express": "^4.17.1",
+    "@types/helmet": "0.0.44",
+    "@types/morgan": "^1.7.37",
+    "@types/node": "^12.11.1",
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-validator": "^6.2.0",
     "firebase-admin": "^8.0.0",
-    "firebase-functions": "^3.1.0"
+    "firebase-functions": "^3.1.0",
+    "helmet": "^3.21.1",
+    "morgan": "^1.9.1"
   },
   "devDependencies": {
     "tslint": "^5.12.0",
