--- a/functions/package.json
+++ b/functions/package.json
@@ -27,10 +27,11 @@
     "firebase-admin": "^8.0.0",
     "firebase-functions": "^3.1.0",
     "helmet": "^3.21.1",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "node-cache": "^5.1.0"
   },
   "devDependencies": {
-    "tslint": "^5.12.0",
+    "tslint": "^5.20.1",
     "typescript": "^3.2.2"
   },
   "private": true
