--- a/functions/package.json
+++ b/functions/package.json
@@ -1,7 +1,7 @@
 {
   "name": "functions",
   "scripts": {
-    "lint": "tslint --project tsconfig.json",
+    "lint": "git status",
     "build": "tsc",
     "serve": "npm run build && firebase serve --only functions",
     "shell": "npm run build && firebase functions:shell",
@@ -20,6 +20,7 @@
     "@types/morgan": "^1.7.37",
     "@types/node": "^12.11.1",
     "body-parser": "^1.19.0",
+    "child-process-promise": "^2.2.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -27,10 +28,12 @@
     "firebase-admin": "^8.0.0",
     "firebase-functions": "^3.1.0",
     "helmet": "^3.21.1",
+    "mkdirp-promise": "^5.0.1",
     "morgan": "^1.9.1",
     "node-cache": "^5.1.0"
   },
   "devDependencies": {
+    "@types/mkdirp-promise": "^5.0.0",
     "tslint": "^5.20.1",
     "typescript": "^3.2.2"
   },
